--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
 <html lang="en-CA">
   <head>
-  <title>My Websites</title>
+    <title>My Websites</title>
   </head>
   <body>
-  <button href="././Dobs-World/">Dob's World</button>
+    <button href="././Dobs-World/">Dob's World</button>
+    <button href="././Text-Editor">Text Editor</button>
   </body>
+</html>
