--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html lang="en-CA">
   <head>
     <title>My Websites</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <button href="././Dobs-World/">Dob's World</button>
-    <button href="././Text-Editor">Text Editor</button>
+    <button href="https://eclipsethedev.github.io/Dobs-World/">Dob's World</button>
+    <button href="https://eclipsethedev.github.io/Text-Editor">Text Editor</button>
   </body>
 </html>
